--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,17 @@
   "private": true,
   "dependencies": {
     "axios": "^1.4.0",
+    "chart.js": "^4.5.1",
+    "framer-motion": "^12.23.24",
     "react": "^18.2.0",
+    "react-calendar-heatmap": "^1.10.0",
+    "react-chartjs-2": "^5.3.1",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.2",
     "react-scripts": "^5.0.1",
-    "recharts": "^2.15.4"
+    "recharts": "^2.15.4",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.0.0",
