--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.0"
+    "mongoose": "^7.0.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "cross-env": "^10.1.0",
